# screenrecorder-fullpython

./: LICENSE  README.md  paper.bib  paper.md  pyproject.toml  readme.md  recorder.py
.github/workflows/: workflow.yml
src/studiocapturepro/: __init__.py  recorder.py
