[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studioscreenrecorder"
version = "1.0.1"
authors = [
    { name="Madhava", email="your.email@example.com" },
]
description = "High-performance screen recording framework with hardware loopback sync and DSP noise gating."
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "customtkinter>=5.2.0",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.22.0",
    "soundcard>=0.4.2",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/madhavabrightly/MentorTokenWallet"

[project.scripts]
studioscreenrecorder = "studiocapturepro.recorder:main"

[tool.hatch.build.targets.wheel]
packages = ["src/studiocapturepro"]
